force-app/main/default/objects/Supplier_NS_HE__c/fields/Structure_Element__c.field-meta.xml
<CustomField>
    <fullName>Structure_Element__c</fullName>
    <label>Product Structure</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Supplier Nego Scope HEs</relationshipLabel>
    <relationshipName>Supplier_Nego_Scope_HEs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>