force-app/main/default/objects/Supplier_NS_HE__c/fields/Sup_sup_NegoScope__c.field-meta.xml
<CustomField>
    <fullName>Sup_sup_NegoScope__c</fullName>
    <label>Supplier Nego Scope</label>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipLabel>Supplier Nego Scope HEs</relationshipLabel>
    <relationshipName>Supplier_Nego_Scope_HEs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>